refactor: 메모리 최적화 개선