@@ -1,6 +1,6 @@
 package mioneF.yumCup.external.kakao.service;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -9,8 +9,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import jakarta.annotation.PreDestroy;
@@ -19,8 +17,6 @@ import lombok.extern.slf4j.Slf4j;
 import mioneF.yumCup.domain.entity.Restaurant;
 import mioneF.yumCup.exception.InsufficientRestaurantsException;
 import mioneF.yumCup.exception.NoNearbyRestaurantsException;
-import mioneF.yumCup.exception.RestaurantProcessingException;
-import mioneF.yumCup.exception.RestaurantProcessingTimeoutException;
 import mioneF.yumCup.external.kakao.dto.KakaoDocument;
 import mioneF.yumCup.external.kakao.dto.KakaoSearchResponse;
 import mioneF.yumCup.infrastructure.api.KakaoLocalApiClient;
@@ -38,7 +34,6 @@ public class KakaoMapRestaurantService {
 
 	private static final int REQUIRED_RESTAURANTS = 16;
 	private static final int KAKAO_PAGE_SIZE = 15;
-	private static final int TIMEOUT_SECONDS = 5;
 	private static final long CACHE_TTL_SECONDS = 3600;
 
 	private final KakaoLocalApiClient kakaoApiClient;
@@ -97,7 +92,7 @@ public class KakaoMapRestaurantService {
 
 		List<String> kakaoIds = savedRestaurants.stream()
 				.map( Restaurant::getKakaoId )
-				.collect( Collectors.toList() );
+				.toList();
 
 		cacheStrategy.put( cacheKey, kakaoIds, CACHE_TTL_SECONDS );
 		log.info( "Cached {} restaurant IDs", kakaoIds.size() );
@@ -108,28 +103,31 @@ public class KakaoMapRestaurantService {
 
 	/**
 	 * Kakao API로 레스토랑 수집 (병렬 페이징 + 일괄 비동기 처리)
+	 * 메모리 최적화: 중간 List 대신 배열 사용, allOf().join()으로 일괄 대기
 	 */
 	private List<Restaurant> fetchRestaurantsFromKakao(Double latitude, Double longitude, Integer radius) {
-		// 1. 필요한 페이지 수 계산 (16개 필요, 페이지당 15개 = 2페이지)
 		int pagesNeeded = (int) Math.ceil( (double) REQUIRED_RESTAURANTS / KAKAO_PAGE_SIZE );
 
 		log.info( "Fetching {} pages from Kakao API in parallel", pagesNeeded );
 
-		// 2. 카카오 API 병렬 호출 (모든 페이지 동시 요청)
-		List<CompletableFuture<KakaoSearchResponse>> kakaoFutures = IntStream.rangeClosed( 1, pagesNeeded )
+		// 1. 카카오 API 병렬 호출 - 배열로 직접 생성하여 중간 리스트 제거
+		@SuppressWarnings("unchecked")
+		CompletableFuture<KakaoSearchResponse>[] kakaoFutures = IntStream.rangeClosed( 1, pagesNeeded )
 				.mapToObj( page -> CompletableFuture.supplyAsync(
 						() -> fetchRestaurantsPage( latitude, longitude, radius, page ),
 						executorService
 				) )
-				.collect( Collectors.toList() );
+				.toArray( CompletableFuture[]::new );
 
-		// 3. 모든 카카오 결과 수집 및 합치기
-		List<KakaoDocument> allDocuments = kakaoFutures.stream()
-				.map( this::getKakaoResponseWithTimeout )
+		// 2. 모든 카카오 API 호출 완료 대기 후 결과 수집
+		CompletableFuture.allOf( kakaoFutures ).join();
+
+		List<KakaoDocument> allDocuments = Arrays.stream( kakaoFutures )
+				.map( this::getCompletedKakaoResponse )
 				.filter( Objects::nonNull )
 				.flatMap( response -> response.documents().stream() )
 				.limit( REQUIRED_RESTAURANTS )
-				.collect( Collectors.toList() );
+				.toList();
 
 		if ( allDocuments.isEmpty() ) {
 			throw new NoNearbyRestaurantsException( "Can't find any nearby restaurant" );
@@ -140,24 +138,22 @@ public class KakaoMapRestaurantService {
 				allDocuments.size()
 		);
 
-		// 4. 구글 API 일괄 병렬 호출 (모든 레스토랑 동시 처리)
-		List<CompletableFuture<Restaurant>> googleFutures = allDocuments.stream()
+		// 3. 구글 API 일괄 병렬 호출 - 배열로 직접 생성
+		@SuppressWarnings("unchecked")
+		CompletableFuture<Restaurant>[] googleFutures = allDocuments.stream()
 				.map( doc -> CompletableFuture.supplyAsync(
-						() -> {
-							try {
-								return enrichmentService.enrichWithGoogleInfo( doc );
-							}
-							catch (Exception e) {
-								log.error( "Error processing restaurant {}: {}", doc.place_name(), e.getMessage() );
-								throw new RestaurantProcessingException( "Error processing restaurant" );
-							}
-						},
+						() -> enrichWithGoogleInfoSafe( doc ),
 						executorService
 				) )
-				.collect( Collectors.toList() );
+				.toArray( CompletableFuture[]::new );
 
-		// 5. 결과 수집
-		List<Restaurant> allRestaurants = collectRestaurantResults( googleFutures );
+		// 4. 모든 구글 API 호출 완료 대기 후 결과 수집
+		CompletableFuture.allOf( googleFutures ).join();
+
+		List<Restaurant> allRestaurants = Arrays.stream( googleFutures )
+				.map( this::getCompletedRestaurantResult )
+				.filter( Objects::nonNull )
+				.toList();
 
 		log.info( "Completed processing {} restaurants", allRestaurants.size() );
 
@@ -170,15 +166,11 @@ public class KakaoMapRestaurantService {
 	}
 
 	/**
-	 * 타임아웃과 함께 Kakao API 응답 가져오기
+	 * 완료된 Kakao Future에서 결과 추출 (allOf 이후 호출)
 	 */
-	private KakaoSearchResponse getKakaoResponseWithTimeout(CompletableFuture<KakaoSearchResponse> future) {
+	private KakaoSearchResponse getCompletedKakaoResponse(CompletableFuture<KakaoSearchResponse> future) {
 		try {
-			return future.get( TIMEOUT_SECONDS, TimeUnit.SECONDS );
-		}
-		catch (TimeoutException e) {
-			log.warn( "Kakao API call timed out" );
-			return null;
+			return future.getNow( null );
 		}
 		catch (Exception e) {
 			log.error( "Error fetching from Kakao API: {}", e.getMessage() );
@@ -186,6 +178,31 @@ public class KakaoMapRestaurantService {
 		}
 	}
 
+	/**
+	 * Google API enrichment을 안전하게 처리
+	 */
+	private Restaurant enrichWithGoogleInfoSafe(KakaoDocument doc) {
+		try {
+			return enrichmentService.enrichWithGoogleInfo( doc );
+		}
+		catch (Exception e) {
+			log.error( "Error processing restaurant {}: {}", doc.place_name(), e.getMessage() );
+			return null;
+		}
+	}
+
+	/**
+	 * 완료된 Restaurant Future에서 결과 추출 (allOf 이후 호출)
+	 */
+	private Restaurant getCompletedRestaurantResult(CompletableFuture<Restaurant> future) {
+		try {
+			return future.getNow( null );
+		}
+		catch (Exception e) {
+			log.error( "Error getting restaurant result: {}", e.getMessage() );
+			return null;
+		}
+	}
 
 	/**
 	 * Kakao API 페이지 조회
@@ -203,29 +220,5 @@ public class KakaoMapRestaurantService {
 				page,
 				KakaoSearchResponse.class
 		);
-	}
-
-	/**
-	 * 병렬 처리 결과 수집
-	 */
-	private List<Restaurant> collectRestaurantResults(List<CompletableFuture<Restaurant>> futures) {
-		return futures.stream()
-				.map( this::getRestaurantWithTimeout )
-				.collect( Collectors.toList() );
-	}
-
-	/**
-	 * 타임아웃과 함께 Future 결과 가져오기
-	 */
-	private Restaurant getRestaurantWithTimeout(CompletableFuture<Restaurant> future) {
-		try {
-			return future.get( TIMEOUT_SECONDS, TimeUnit.SECONDS );
-		}
-		catch (TimeoutException e) {
-			throw new RestaurantProcessingTimeoutException( "Restaurant information processing timeout" );
-		}
-		catch (Exception e) {
-			throw new RestaurantProcessingException( "Error processing restaurant information" );
-		}
 	}
 }
